Add ajax to compose

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,7 +2,7 @@
   <div id="folders">
     <ul>
       <li>
-       <%= link_to 'COMPOSE', new_message_path %>
+       <%= link_to 'COMPOSE', '#' %>
       </li>
       <li>
         <%= link_to 'INBOX', messages_path(folder: 'inbox') %>
