add ajax to submit button

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -25,6 +25,7 @@
     <%= f.text_area :content %>
   </div>
   <div class="actions">
-    <%= f.submit 'Send Message', class:'btn btn-medium btn-success'%>
+    <%= f.submit 'Send Message', class:'btn btn-medium btn-success', id:"sendButton"%>
+
   </div>
 <% end %>
