--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -44,7 +44,10 @@
   	        <% end %>
 
   					<span class="subjectdet">
-            	<%= message.subject %>  <span class="data"><%= message.created_at %></span>
+            	<%= message.subject %>  
+                <span class="data">
+                  <%= message.created_at %>
+                </span>
   					</span>
   	        <hr>
   	       <% end %>
