--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -31,7 +31,7 @@
   		<ul>
       <% @messages.each do |message| %>
   			<li data-message="<%= message.id %>">
-  	      <%= link_to '#' do %>
+  	 <!--      <%= link_to '#' do %> -->
   	        <% if @current_folder == 'inbox' %>
   	          <span class="maildet">
   	            From:
