--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -62,9 +62,9 @@ nav.main-menu {
   margin-top: 60px;
   margin-bottom: 20px;
   font-size: 32px;
-  font-weight: 200px;
-  float:right;
-  height: 140 px;
+  font-weight: 200;
+  float: right;
+  height: 140px;
 }
 
 
@@ -77,7 +77,7 @@ nav.main-menu ul li a {
   line-height: 40px;
   margin-left: 20px;
   color: #f0f0f0;
- 
+
 }
 
 nav.main-menu ul li a:hover, nav.main-menu ul li.active a {
@@ -428,7 +428,7 @@ float:right;
 }
 .span12
 {background-color: #FCFFF5;
-  
+
 }
 .container li
 {
@@ -440,20 +440,20 @@ float:right;
 
 }
 .buton
-{float:right;
+{
+  float: right;
   background-color: #468966;
-  padding:5px 8px;
-  font-size:17.5px;
-  -webkit-border-radius:6px;
-  -moz-border-radius:6px;
-  border-radius:6px
-  text-decoration:none;
+  padding: 5px 8px;
+  font-size: 17.5px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  text-decoration: none;
   margin-right: 15px;
 }
 
 .emailw
 {
-  float:center;
 }
 
 .container td{
@@ -471,7 +471,7 @@ float:right;
   float: right;
 }
 
-#divcont{ 
+#divcont{
   overflow: auto;
 }
 
@@ -483,7 +483,7 @@ float:right;
 
 
 div.contactform{
-  
+
   background-color: rgba(0,0,0,0.2);
   width: 800px;
   height: auto;
@@ -499,16 +499,16 @@ div.contactform{
   border-radius: 8px;
 }
 
-.contactform border-top-width: {
+.contactform {
   padding-left: 60px;
 }
 
-.contactform h2{  
- display:inline-block; 
+.contactform h2{
+ display:inline-block;
 }
 
 .contactform h2:nth-child(2){
-  margin-right:60px; 
+  margin-right:60px;
 }
 
 .span6 ul{
