--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -19,7 +19,8 @@
     <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
+</br>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class:'btn btn-medium'%>
   </div>
 <% end %>
