--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,11 +1,11 @@
 
 <div class="loginform">
-  
+	
+	<h2 class="formtitle">New contact</h1>
 
-<h1>New contact</h1>
+		<%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', contacts_path %>
-
+		<div class="contactback">
+			<%= link_to 'Back', contacts_path %>
+		</div>
 </div>
