--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -14,23 +14,16 @@
 
 <div class="span6 text-center">
   <p class="description">
-    An interactive application that allows users to read and write emails using vocal commands and gestures.
+    An interactive application that allows users to read and write emails using gestures.
   </p>
 
   <p>
   	<a href="#" class="btn btn-success btn-large" id="read-email">
   		Read this email!
     </a>
-  </p>
-
-  <p class="description">
     <a href="http://play.google.com/store" target="_blank">
       <%= image_tag 'googleplay1.png' %> 
     </a>
-   
-    <a href="http://store.apple.com/us" target="_blank">
-      <%= image_tag 'appstore1.png' %> 
-    </a>
- </p>
+  </p>
 
 </div>
