--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="loginform">
 
-<h1>Editing contact</h1>
+<h2 class="formtitle">Editing contact</h2>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @contact %> |
-<%= link_to 'Back', contacts_path %>
+<div class="editback">
+	<%= link_to 'Back', contacts_path %>
+</div>
 </div>
