--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,15 +2,15 @@
 
   <div class="span6">
     <p>
-      &copy; Email for visually impaired.2013
+      &copy; ITNT Bootcamp. 2013
     </p>
   </div>
 
   <div class="span6">
     <p class="pull-right">
       Contact
-      <a href="mailto:email.forvisuallyimpaired@example.com">
-        email.forvisuallyimpaired@example.com
+      <a href="mailto:salut@arstehnica.ro">
+        salut@arstehnica.ro
       </a>
     </p>
   </div>
