--- a/app/views/shared/_meniu.html.erb
+++ b/app/views/shared/_meniu.html.erb
@@ -16,7 +16,7 @@
           <%= link_to 'Messages' ,messages_path %>
         <% else %>
           <%= link_to 'Sign Up', new_user_registration_path %>        
-          <%= link_to 'Sign in', new_user_session_path %>        
+          <%= link_to 'Log in', new_user_session_path %>        
         <% end %>      
   </nav>
 </div>
