--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -24,6 +24,7 @@ a {
 a:hover {
   color: white;
   text-decoration: none;
+  background-color: transparent;
 }
 
 html.simple a, html.simple a:hover{
@@ -59,7 +60,7 @@ footer a {
 }
 
 nav.main-menu {
-  margin-top: 60px;
+  margin-top: 90px;
   margin-bottom: 0px;
   font-size: 32px;
   font-weight: 200;
@@ -77,12 +78,12 @@ nav.main-menu ul li a {
   line-height: 40px;
   margin-left: 20px;
   color: #f0f0f0;
-
 }
 
 nav.main-menu ul li a:hover, nav.main-menu ul li.active a {
   color: white;
   text-decoration: none;
+  
 }
 
 .description {
@@ -542,6 +543,7 @@ div.contactform{
   border-bottom-right-radius: 4px;
 	border-bottom-left-radius: 4px;
   color: white;
+  margin-bottom:-30px;
 }
 
 div#error_explanation {
